# vx220-dashboard

./: .gitignore  Cargo.toml  GL_troubleshooting.txt  README.md  deploy.ps1  deploy.sh  raspi_setup.sh  run_raspi_setup.ps1
assets/themes/: dark_race.yml  dark_road.yml  light_race.yml  light_road.yml
docs/: esp32-payload.md
docs/UPS_HAT_D/: batteryTray.py
esp32/: main.cpp
src/: esp32.rs  logging.rs  main.rs  racebox.rs  telemetry.rs  ui.rs
src/racebox/: ble.rs  parser.rs  protocol.rs
src/telemetry/: mock.rs
src/ui/: render.rs  theme.rs  window.rs
src/ui/widgets/: g_force_meter.rs  gauge.rs  mod.rs  rpm_gauge.rs  theme.rs  turbo_pressure_gauge.rs
