[package]
name = "vx220-dashboard"
version = "0.1.0"
edition = "2024"

[features]
mock_telemetry = []

[dependencies]
btleplug = "0.11.8"
env_logger = "0.11.8"
futures = "0.3.31"
pollster = "0.4.0"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-serial = "5.4.5"
winit = "0.28.6"
femtovg = "0.7"
glow = "0.16.0"
glutin = "0.30.10"
glutin-winit = "0.3.0"
raw-window-handle = "0.5"
gl = "0.14.0"
log = "0.4.27"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
